docs: update Getting Started to feature npm workflow

--- a/apps/agor-docs/pages/guide/index.mdx
+++ b/apps/agor-docs/pages/guide/index.mdx
@@ -24,18 +24,18 @@ import { GifGallery } from '../../components'
 
 ## Getting Started
 
-**Try in GitHub Codespaces (fastest):**
+```bash
+npm install -g agor-live
+agor init
+agor daemon start
+agor open
+```
+
+**Try in GitHub Codespaces:**
 
 [![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/mistercrunch/agor?quickstart=1&devcontainer_path=.devcontainer%2Fplayground%2Fdevcontainer.json)
 
-**Or run locally with Docker:**
-
-```bash
-docker compose up
-# Visit http://localhost:5173 → Login: admin@agor.live / admin
-```
-
-See the [Docker Guide](/guide/docker) and [Development Guide](/guide/development) for more details.
+See the [Getting Started Guide](/guide/getting-started) for detailed instructions, or the [Docker Guide](/guide/docker) for running with Docker.
 
 ---
 
