--- a/apps/agor-docs/pages/api-reference/index.mdx
+++ b/apps/agor-docs/pages/api-reference/index.mdx
@@ -6,7 +6,7 @@ Interactive REST API documentation auto-generated from the Agor daemon.
 
 The Agor daemon serves **live, interactive API documentation** via Swagger UI:
 
-<div style={{ padding: '20px', background: '#1a1a1a', borderRadius: '8px', border: '1px solid #333', marginTop: '20px' }}>
+<div style={{ padding: '20px', background: '#1a1a1a', borderRadius: '8px', border: '1px solid #333', marginTop: '20px', marginBottom: '20px' }}>
   <p style={{ margin: '0 0 10px', color: '#2e9a92', fontWeight: 'bold' }}>Start your daemon:</p>
   <pre style={{ margin: '0 0 15px', padding: '10px', background: '#0a0a0a', borderRadius: '4px' }}>
 agor daemon start
@@ -18,6 +18,8 @@ agor daemon start
     </a>
   </p>
 </div>
+
+![Swagger UI](/swagger.png)
 
 **Features:**
 - ✅ **Always up-to-date** - Generated from actual service definitions
